fix: pricing alignment centering - closes #72

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -257,18 +257,6 @@ header .crafted__right-arrow {
     display: none;
   }
 }
-.pricing {
-  padding: 100px 0;
-}
-.pricing__intro {
-  padding: 0 20px 60px 20px;
-}
-@media (min-width: 576px) {
-  .pricing__intro {
-    padding: 0 440px 60px 440px;
-  }
-}
-
 .pricing__cards {
   color: white;
   width: 90%;
@@ -283,7 +271,8 @@ header .crafted__right-arrow {
 }
 .pricing__cards .pricing__card {
   margin-top: 30px;
-  padding: 40px 0;
+  padding: 2em 0;
+  text-align: center;
   border-radius: 5px;
   background: #2bd8dd;
   background: linear-gradient(180deg, #2bd8dd 0%, #0368f4 100%);
